# qt_test_app

./: .gitignore  build.cmd  pyproject.toml
data/: example.hdf5  example.json
src/: main.py  models.py  tools.py  views.py
src/ui/: main_widget.ui  main_widget_ui.py
