[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "~3.10"
pyqt5 = "^5.15.9"
pyqt5-tools = "^5.15.9.3.3"
h5py = "^3.9.0"
numpy = "^1.25.2"
scipy = "^1.11.2"
pyqtgraph = "^0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
